--- a/car_prediction.ipynb
+++ b/car_prediction.ipynb
@@ -11,7 +11,7 @@
     "# Aron Bensimhon: \n",
     "### 342762689\n",
     "\n",
-    "Github URL: https://github.com/orifelszer/MachineLearning/blob/main/car_prediction%20(4).ipynb"
+    "Github URL: https://github.com/orifelszer/MachineLearning/blob/main/car_prediction.ipynb"
    ]
   },
   {
